--- a/projects/山脚下/项目计划_目录导航.md
+++ b/projects/山脚下/项目计划_目录导航.md
@@ -1,394 +1,161 @@
-# 项目计划快速导航索引
-
-> **项目**: 山脚下客户流失预测系统 v2.0  
-> **用途**: 快速定位项目计划中的关键章节  
-> **完整文档**: [项目计划.md](./项目计划.md)
-
----
-
-## 🎯 快速跳转
-
-### 核心文档
-- 📖 [完整项目计划](./项目计划.md)
-- 📈 [进度跟踪](./进度跟踪.md)
-- 🚀 [新聊天快速恢复](./新聊天快速恢复.md)
-- 🗺️ [本导航文档](./项目计划_目录导航.md)
-
----
-
-## 📑 项目计划章节速览
-
-### 第一部分：项目概述
-**位置**: [项目计划.md → 第一部分](./项目计划.md#第一部分项目概述)
-
-| 章节 | 内容 | 关键词 |
-|------|------|--------|
-| 1.1 项目灵感与背景 | 项目命名、业务背景、核心价值 | 山脚下、数据驱动、客户流失 |
-| 1.2 项目目标 | 业务目标、技术目标、团队目标 | 降低流失率15-20%、AUC≥0.75 |
-| 1.3 实施计划 | 项目周期、资源配置 | 120天、4阶段、4人团队 |
-
-**快速查找**:
-- 项目价值和意义 → 1.1节
-- 成功指标和KPI → 1.2节
-- 时间和人力安排 → 1.3节
-
----
-
-### 第二部分：核心改动
-**位置**: [项目计划.md → 第二部分](./项目计划.md#第二部分核心改动)
-
-| 章节 | 内容 | 关键词 |
-|------|------|--------|
-| 2.1 九项核心改动汇总 | v1.0→v2.0改动对比表 | 180天、20天、对照组 |
-| 2.2 改动影响分析 | 详细影响分析和实施要点 | 存储、性能、效果验证 |
-
-**关键改动速查**:
-- ⭐ **数据保留期**: 90天 → **180天**
-- ⭐ **特征窗口**: 30天 → **20天**
-- ⭐ **对照组**: 无 → **新增**
-
-**快速查找**:
-- 为什么改为180天 → 2.2.1节
-- 为什么改为20天 → 2.2.2节
-- 对照组如何设计 → 2.2.3节
-
----
-
-### 第三部分：完整系统架构
-**位置**: [项目计划.md → 第三部分](./项目计划.md#第三部分完整系统架构)
-
-| 章节 | 内容 | 关键词 |
-|------|------|--------|
-| 3.1 六层目录结构 | 完整项目文件结构 | config、data、src、scripts |
-| 3.2 数据架构设计 | 9个数据库表设计 | customers、transactions、features |
-| 3.3 数据流向说明 | 端到端数据流程图 | ETL、特征、预测、对照组 |
-
-**目录结构关键路径**:
-```
-shanjiaxia/
-├── config/          # 配置文件
-├── data/            # 数据存储
-├── src/             # 源代码
-│   ├── data_processing/
-│   ├── feature_engineering/
-│   ├── modeling/
-│   ├── control_group/  ← 新增对照组模块
-│   └── api/
-├── scripts/         # 执行脚本
-├── tests/           # 测试代码
-└── docs/            # 文档
-```
-
-**数据库表速查**:
-- 客户信息: `customers`
-- 交易数据: `transactions`
-- 互动数据: `interactions`
-- 特征数据: `features`
-- 预测结果: `predictions`
-- 对照组配置: `control_group_config`
-- 对照组分配: `control_group_assignments`
-- 对照组分析: `control_group_analysis`
-- 模型训练: `model_training_log`
-
-**快速查找**:
-- 项目文件放哪里 → 3.1节
-- 数据库怎么设计 → 3.2.1节
-- 180天数据怎么管理 → 3.2.2节
-- 数据怎么流转 → 3.3节
-
----
-
-### 第四部分：88特征体系
-**位置**: [项目计划.md → 第四部分](./项目计划.md#第四部分88特征体系)
-
-| 章节 | 内容 | 关键词 |
-|------|------|--------|
-| 4.1 特征分类 | 8大类88个特征详解 | RFM、交易、行为、趋势 |
-| 4.2 特征权重配置 | 特征权重和TOP20特征 | RFM 20%、交易20% |
-| 4.3 特征工程实现 | 代码框架和实现示例 | Calculator、Pipeline |
-
-**8大特征类别**:
-1. **基础信息特征** (8个) - 客户属性
-2. **RFM特征** (12个) - 新近度、频率、价值
-3. **交易行为特征** (20个) - 金额、频次、品类
-4. **互动行为特征** (15个) - 登录、浏览、客服
-5. **变化趋势特征** (12个) - 短中长期趋势
-6. **生命周期特征** (8个) - 客户阶段
-7. **社交网络特征** (6个) - 推荐、影响力
-8. **风险信号特征** (7个) - 流失信号
-
-**TOP 5 最重要特征**:
-1. `days_since_last_transaction` - 最后交易距今
-2. `days_since_last_login` - 最后登录距今
-3. `consecutive_inactive_days` - 连续不活跃天数
-4. `rfm_combined_score` - RFM综合得分
-5. `transaction_count_20d` - 20天交易次数
-
-**快速查找**:
-- 有哪些特征 → 4.1节（各子节）
-- 特征权重配置 → 4.2节
-- 特征如何计算 → 4.3节
-- RFM特征详解 → 4.1.2节
-- 风险信号特征 → 4.1.8节
-
----
-
-### 第五部分：实施路线图
-**位置**: [项目计划.md → 第五部分](./项目计划.md#第五部分实施路线图)
-
-| 章节 | 内容 | 关键词 |
-|------|------|--------|
-| 5.1 员工配置与权限 | 4人团队分工和权限表 | 项目经理、工程师 |
-| 5.2 四阶段实施计划 | 120天详细任务清单 | 环境、特征、集成、部署 |
-| 5.3 对照组功能实现 | 对照组完整实现方案 | 分配、跟踪、分析 |
-| 5.4 快速参考 | 命令、配置、导航 | bash命令、yaml配置 |
-
-**四个阶段速览**:
-
-#### 阶段一：环境搭建与数据准备 (Day 1-30)
-- Week 1-2: 环境搭建
-- Week 3-4: 数据库设计
-- Week 5: 数据探索和标签定义
-- **交付**: 开发环境、数据库、EDA报告
-
-#### 阶段二：特征工程与模型训练 (Day 31-60)
-- Week 6-7: 基础特征开发
-- Week 8: 高级特征开发
-- Week 9: 特征分析
-- Week 10: 模型训练
-- **交付**: 88个特征、训练好的模型
-
-#### 阶段三：系统集成与测试 (Day 61-90)
-- Week 11-12: 预测系统开发
-- Week 13: 对照组模块开发 ⭐新增
-- Week 14: API开发
-- Week 15: 测试
-- **交付**: 完整系统、对照组模块、API
-
-#### 阶段四：部署上线与优化 (Day 91-120)
-- Week 16: 部署准备
-- Week 17: 上线部署
-- Week 18: 试运行
-- Week 19-20: 效果评估与优化
-- **交付**: 线上系统、对照组实验报告
-
-**团队配置速查**:
-| 角色 | 人数 | 主要职责 |
-|------|------|---------|
-| 项目经理/Tech Lead | 1 | 整体管理、技术决策 |
-| 数据工程师 | 1 | 数据库、ETL、特征 |
-| 算法工程师 | 1 | 模型训练、优化 |
-| 后端工程师 | 1 | API、集成、部署 |
-
-**快速查找**:
-- 团队怎么配置 → 5.1.1-5.1.2节
-- 权限怎么分配 → 5.1.3节
-- 阶段一做什么 → 5.2 阶段一
-- 阶段二做什么 → 5.2 阶段二
-- 阶段三做什么 → 5.2 阶段三
-- 阶段四做什么 → 5.2 阶段四
-- 对照组怎么实现 → 5.3节
-- 常用命令 → 5.4.1节
-- 配置文件示例 → 5.4.2节
-
----
-
-## 🔍 按主题快速查找
-
-### 数据相关
-| 主题 | 位置 | 关键内容 |
-|------|------|---------|
-| 数据保留180天 | 2.2.1节、3.2.2节 | 为什么、如何实现 |
-| 数据库表设计 | 3.2.1节 | 9个表的完整SQL |
-| 数据流向 | 3.3节 | 端到端流程图 |
-| 数据清理策略 | 3.2.2节 | 归档和清理脚本 |
-
-### 特征相关
-| 主题 | 位置 | 关键内容 |
-|------|------|---------|
-| 88个特征列表 | 4.1节 | 8大类详细列表 |
-| 20天特征窗口 | 2.2.2节、4.3节 | 为什么、如何计算 |
-| RFM特征 | 4.1.2节、4.3节 | 12个RFM特征详解 |
-| TOP20重要特征 | 4.2节 | 最重要的特征 |
-| 特征权重 | 4.2节 | 各类特征权重分配 |
-| 特征计算代码 | 4.3节 | Python实现示例 |
-
-### 模型相关
-| 主题 | 位置 | 关键内容 |
-|------|------|---------|
-| 模型目标 | 1.2节 | AUC≥0.75 |
-| 模型训练 | 5.2 阶段二 | Week10任务 |
-| 模型配置 | 5.4.2节 | model.yaml示例 |
-| 模型评估 | 5.3.2节 | 离线+在线评估 |
-
-### 对照组相关
-| 主题 | 位置 | 关键内容 |
-|------|------|---------|
-| 对照组设计 | 2.2.3节 | 核心设计原则 |
-| 对照组数据库 | 3.2.1节 | 3个表的SQL |
-| 对照组实现 | 5.3节 | 完整代码示例 |
-| 分组算法 | 5.3.2节 | 随机分配代码 |
-| 效果分析 | 5.3.2节 | 统计检验代码 |
-
-### 实施相关
-| 主题 | 位置 | 关键内容 |
-|------|------|---------|
-| 项目周期 | 1.3节 | 120天 |
-| 四阶段计划 | 5.2节 | 详细任务清单 |
-| 团队配置 | 5.1节 | 4人分工 |
-| 权限管理 | 5.1.3节 | 权限矩阵 |
-| 快速命令 | 5.4.1节 | 常用bash命令 |
-| 配置文件 | 5.4.2节 | YAML配置示例 |
-
----
-
-## 📊 关键数字速查卡
-
-### 时间数字
-- **项目总周期**: 120天
-- **数据保留期**: 180天
-- **特征窗口**: 20天
-- **预测周期**: 7天
-- **对照组观察期**: 7天
-
-### 数量数字
-- **特征总数**: 88个
-- **特征类别**: 8大类
-- **数据库表**: 9个
-- **团队人数**: 4人
-- **实施阶段**: 4个阶段
-
-### 比例数字
-- **对照组比例**: 10%
-- **干预组比例**: 90%
-- **测试集比例**: 20%
-- **验证集比例**: 20%
-- **训练集比例**: 60%
-
-### 目标数字
-- **目标AUC**: ≥ 0.75
-- **目标准确率**: ≥ 70%
-- **流失率降低**: 15-20%
-- **挽留成功率**: ≥ 40%
-- **系统可用性**: ≥ 99%
-
----
-
-## 🎯 按角色快速导航
-
-### 项目经理
-**首先看**:
-1. [项目概述](./项目计划.md#第一部分项目概述) - 了解整体目标
-2. [核心改动](./项目计划.md#第二部分核心改动) - 掌握v2.0变化
-3. [实施路线图](./项目计划.md#第五部分实施路线图) - 管理项目进度
-4. [进度跟踪](./进度跟踪.md) - 监控实时进度
-
-**重点关注**:
-- 团队配置和分工 (5.1节)
-- 四阶段任务清单 (5.2节)
-- 风险和问题跟踪 (进度跟踪.md)
-
-### 数据工程师
-**首先看**:
-1. [系统架构](./项目计划.md#第三部分完整系统架构) - 了解数据架构
-2. [数据库设计](./项目计划.md#321-数据库表结构) - 建表SQL
-3. [数据保留策略](./项目计划.md#322-数据保留策略) - 180天管理
-4. [阶段一任务](./项目计划.md#阶段一环境搭建与数据准备-30天-) - Week3-5任务
-
-**重点关注**:
-- 9个数据库表设计 (3.2.1节)
-- 数据流向 (3.3节)
-- 数据清理脚本 (3.2.2节)
-- ETL和数据导入 (5.2 阶段一 Week3)
-
-### 算法工程师
-**首先看**:
-1. [88特征体系](./项目计划.md#第四部分88特征体系) - 特征设计
-2. [特征工程实现](./项目计划.md#43-特征工程实现) - 代码框架
-3. [阶段二任务](./项目计划.md#阶段二特征工程与模型训练-30天) - 模型训练
-4. [对照组实现](./项目计划.md#53-对照组功能实现) - 效果验证
-
-**重点关注**:
-- 88个特征详解 (4.1节)
-- 特征权重和TOP20 (4.2节)
-- 特征计算代码 (4.3节)
-- 模型训练流程 (5.2 阶段二 Week10)
-- 对照组效果分析 (5.3.2节)
-
-### 后端工程师
-**首先看**:
-1. [目录结构](./项目计划.md#31-六层目录结构) - 代码组织
-2. [API开发](./项目计划.md#week-14-api开发) - 接口设计
-3. [对照组模块](./项目计划.md#53-对照组功能实现) - 新模块开发
-4. [快速参考](./项目计划.md#54-快速参考) - 命令和配置
-
-**重点关注**:
-- 项目目录结构 (3.1节)
-- API端点设计 (5.2 阶段三 Week14)
-- 对照组API (5.3.2节)
-- 部署和运维 (5.2 阶段四)
-- 配置文件示例 (5.4.2节)
-
----
-
-## 🔗 相关资源
-
-### 项目文档
-- [完整项目计划](./项目计划.md) - 8000+行完整文档
-- [进度跟踪](./进度跟踪.md) - 实时进度和任务状态
-- [快速恢复](./新聊天快速恢复.md) - 新聊天窗口恢复指南
-- [本导航文档](./项目计划_目录导航.md) - 快速导航索引
-
-### 代码仓库
-- **GitHub**: https://github.com/laobai6630-dotcom/cto/
-- **项目路径**: `projects/山脚下/`
-
-### 技术文档
-- [XGBoost文档](https://xgboost.readthedocs.io/)
-- [scikit-learn文档](https://scikit-learn.org/)
-- [FastAPI文档](https://fastapi.tiangolo.com/)
-- [PostgreSQL文档](https://www.postgresql.org/docs/)
-
----
-
-## 💡 使用技巧
-
-### 技巧1: 善用浏览器搜索
-在浏览项目计划.md时，使用 `Ctrl+F` (或 `Cmd+F`) 搜索关键词：
-- 搜索 "180天" 找到所有相关内容
-- 搜索 "对照组" 找到对照组相关章节
-- 搜索 "Week" 找到具体周的任务
-
-### 技巧2: 利用Markdown锚点
-点击文档中的链接可以直接跳转到对应章节：
-- `[第一部分](#第一部分项目概述)` → 跳转到第一部分
-- `[3.2节](#32-数据架构设计)` → 跳转到3.2节
-
-### 技巧3: 分屏阅读
-- 左侧: 本导航文档
-- 右侧: 项目计划.md
-- 快速定位，深入阅读
-
-### 技巧4: 关注标记
-- ✅ 已完成
-- 🔄 进行中
-- ⏳ 待开始
-- ⭐ 重要/高优先级
-- ❌ 已取消
-
----
-
-## 📝 更新记录
-
-| 日期 | 更新内容 | 更新人 |
-|------|---------|--------|
-| 2025-12-17 | 创建导航索引文档 | - |
-
----
-
-> **文档版本**: v1.0  
-> **最后更新**: 2025-12-17  
-> **完整文档**: [项目计划.md](./项目计划.md)  
-> 
-> **GitHub**: https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/项目计划_目录导航.md  
-> **本地路径**: D:\cto\projects\山脚下\项目计划_目录导航.md
+项目名称：山脚下 - A股"山脚下"形态股票精准筛选系统
+版本：v2.0
+更新时间：2025-12-17
+项目状态：规划完成，待启动
+
+📌 快速入口
+核心文档
+🔗 完整项目计划 - 项目详细规划书（8000+行）
+📊 进度跟踪 - 实时项目进度更新
+⚡ 新聊天快速恢复 - 新窗口快速恢复清单
+员工文档
+👥 员工配置 - 4个职位权限配置
+使用手册
+📘 Dashboard使用指南
+📗 Monitor使用指南
+📙 参数调整指南
+📕 对照组使用指南
+其他
+📈 API调用策略
+💾 框架备份清单
+🎯 按功能快速导航
+📋 基础信息
+| 功能 | 章节 | 内容 |
+|------|------|------|
+| 项目灵感 | 项目概述 | 山脚下形态定义、拉升日定义 |
+| 实施计划 | 项目概述 | 4步标的筛选、特征提炼、再筛选、跟踪 |
+| 核心改动 | 核心改动 | 9项改动汇总表 |
+
+🏗️ 架构与结构
+| 功能 | 章节 | 内容 |
+|------|------|------|
+| 完整结构 | 完整树状结构 | 6层目录详解（数据、脚本、网页、工作流、文档、日志） |
+| 数据架构 | 数据架构 | 数据流向、自托管Runner配置 |
+| 特征时间窗口 | 特征提取窗口说明 | 20个交易日窗口规则 |
+
+🧬 特征与模型
+| 功能 | 章节 | 内容 |
+|------|------|------|
+| 88个特征体系 | 88个特征体系 | 特征分类、权重、重要性排名 |
+| 筹码分布 | 筹码分布详解 | 10个筹码特征、权重0.2 |
+| 对照组功能 | 对照组特征分析 | 对照组作用、在Dashboard展示 |
+| ML方案 | 机器学习方案 | 3模型集成、评估指标 |
+
+🌐 网页与交互
+| 功能 | 章节 | 内容 |
+|------|------|------|
+| Dashboard | 网页1Dashboard | 7个板块功能详解 |
+| Monitor监控 | 网页2Monitor | 工作流状态、API统计 |
+| Guide指南 | 网页3Guide | 监督报告、导航结构 |
+| 密码保护 | 密码保护机制 | auth.js实现、权限分层 |
+
+👥 团队与权限
+| 功能 | 章节 | 内容 |
+|------|------|------|
+| 项目经理 | 项目经理 | 职责、权限、工作时间 |
+| AI Agent | AI Agent | 职责、权限、工作内容 |
+| 消息面分析 | 消息面分析员工 | 职责、输出文件、权重调整 |
+| 监督员工 | 监督员工 | 职责、监控内容、报告生成 |
+| 权限速查表 | 员工权限表 | 所有功能权限对照表 |
+
+📅 实现路线
+| 功能 | 章节 | 内容 |
+|------|------|------|
+| 4阶段路线图 | 4阶段实现路线图 | 分阶段任务清单和预期产出 |
+| 阶段1 | 阶段1基础框架 | 数据采集、特征提取、ML模型 |
+| 阶段2 | 阶段2相似度筛选 | 相似度筛选、对照组、30天跟踪 |
+| 阶段3 | 阶段3高级功能 | Dashboard、GitHub工作流、监督报告 |
+| 阶段4 | 阶段4优化文档 | 性能优化、文档完善、上线运维 |
+
+⛳ 确认与备份
+| 功能 | 章节 | 内容 |
+|------|------|------|
+| 18步确认清单 | 每步确认机制 | 18步实现清单 |
+| 框架备份 | 框架备份策略 | 备份计划、版本管理 |
+| 资源清单 | 项目资源清单 | 本地存储、GitHub结构、依赖工具 |
+
+🔗 按数据源快速导航
+数据采集
+📂 数据结构：完整树状结构第1层
+📝 180日保留规则：数据保留规则详解
+🔄 历史备份：daily_data_backup_YYYY-MM-DD.csv
+特征工程
+📋 原始特征：134个原始特征
+🤖 AI特征：10个AI高级特征
+💰 筹码特征：10个筹码特征
+🔍 对照组特征：对照组特征分析
+机器学习
+🎯 模型选择：3模型集成方案
+📊 评估指标：模型评估指标
+🧪 对照组验证：对照组在验证中的作用
+🚀 按工作类型快速导航
+第一次使用
+📖 阅读：项目概述
+📊 了解：完整树状结构
+👥 确认：员工配置
+✅ 开始：阶段1任务
+项目经理工作
+📈 查看进度：进度跟踪
+🎮 调整参数：参数调整指南
+📊 查看监督报告：Dashboard监督报告
+📋 查看候选：Dashboard候选列表
+🔍 对比对照组：对照组分析
+AI Agent工作
+📋 查看任务：阶段任务清单
+🔗 触发机制：GitHub触发机制
+📂 输出文件位置：完整树状结构
+🧪 对照组脚本：contrast_group脚本
+消息面分析员工工作
+📝 日常分析：消息面分析员工职责
+📤 输出文件：daily_news_analysis.json
+⚖️ 权重调整：权重分配
+监督员工工作
+🔍 监控内容：监控内容详解
+📊 生成报告：监督报告数据结构
+⚠️ 异常检测：监控项目状态
+📚 关键概念速查
+| 概念 | 定义 | 位置 |
+|------|------|------|
+| 拉升日 | 股价开启连续拉升走势的首个交易日 | 项目概述 |
+| 山脚下形态 | K线平稳→陡峭上升→回落至平稳的形态 | 项目概述 |
+| 特征时间窗口 | 从拉升日前一天向前20个交易日 | 特征提取窗口 |
+| 对照组 | 30个交易日跌幅前20名的股票 | 对照组功能 |
+| 分离度 | 对照组vs候选组的特征区分程度 | 对照组作用 |
+| 相似度 | ML预测分数+筹码分布+消息面的加权评分 | 权重分配 |
+
+🔑 关键命令速查
+# 启动本地定时调度
+python D:\cto\scripts\data_collection\scheduler_main.py
+
+# 运行特征提取（20日窗口）
+python D:\cto\scripts\feature_engineering\feature_extraction.py
+
+# 识别对照组
+python D:\cto\scripts\contrast_group\identify_contrast_group.py
+
+# 对照组对比分析
+python D:\cto\scripts\contrast_group\compare_contrast_vs_candidates.py
+
+# 运行ML训练
+python D:\cto\scripts\ml_training\model_training.py
+
+# 启动Dashboard
+python D:\cto\dashboard\server.py
+
+# 清理超过180天的备份
+python D:\cto\scripts\utils\backup_manager.py --cleanup
+📞 快速问题排查
+| 问题 | 查看位置 |
+|------|--------|
+| 如何调整参数？ | 参数调整指南 |
+| 如何使用Dashboard？ | Dashboard使用指南 |
+| 如何理解对照组？ | 对照组使用指南 |
+| 如何查看工作流状态？ | Monitor使用指南 |
+| 员工权限是什么？ | 员工权限速查表 |
+| 数据如何保留180天？ | 数据保留规则详解 |
+| 特征窗口为什么是20天？ | 特征提取窗口说明 |
+| 对照组的作用是什么？ | 对照组作用说明 |
+
+最后更新：2025-12-17
+版本：v2.0
+维护者：项目经理
