--- a/projects/山脚下/进度跟踪.md
+++ b/projects/山脚下/进度跟踪.md
@@ -313,3 +313,317 @@ feature_importance.json
 [ ] 项目经理确认：Dashboard可正常显示对照组数据 ✅
 [ ] 项目经理确认：跟踪数据准确 ✅
 阶段2预计完成时间：2026-01-07
+📊 阶段3详细进度（高级功能+工作流）
+目标：完成参数调整面板、GitHub工作流、监督报告
+周期：第4周
+负责人：AI Agent（代码）+ 项目经理（确认）
+
+任务清单
+🛠️ Dashboard高级功能
+[ ] 参数调整面板 - 完整的参数设置界面
+
+基础参数：时间窗口、成功样本涨幅、特征提取窗口 ✅
+相似度阈值：初始、降级1、降级2
+权重调整：ML权重、筹码权重、消息面权重
+对照组参数：对照股票数、跌幅周期、最小分离度 ✅
+筹码分布参数：集中度、锁定率、突破强度
+行业地域筛选
+状态：⏳ 待开发
+[ ] 对照组参数调整面板 ✅ 新增
+
+对照组股票数：[10-50]（默认20）
+对照跌幅周期：[20-30]日（默认30）
+最小分离度阈值：[0.5-1.0]（默认0.85）
+说明：分离度过低则警告
+状态：⏳ 待开发
+[ ] 密码认证（auth.js） - 权限控制
+
+无密码：只读操作（查看数据）
+有密码：可写操作（修改参数、触发工作流）
+实现方式：前端localStorage或后端Flask
+状态：⏳ 待开发
+[ ] 中英文双语（i18n.js） - 多语言支持
+
+语言：中文(zh) + English(en)
+所有按钮、标签、提示语都支持双语
+localStorage自动保存语言偏好
+状态：⏳ 待开发
+[ ] 监督报告板块 - 监督员工报告展示
+
+显示内容：项目状态、异常问题、数据质量、员工日志、关键指标
+对照组监控：分离度指标、波动趋势 ✅
+状态：⏳ 待开发
+[ ] 对照组分析板块 ✅ 新增
+
+对照组股票列表：代码、名称、30天跌幅、ML预测分数、特征差异
+对比分析表：关键特征对比、差异度评分
+稳健性评分：0-1.0分，>0.85为优秀
+可视化图表：特征分布对比、分离度趋势
+状态：⏳ 待开发
+确认标准：项目经理确认→参数调整生效、对照组参数可独立调整 ✅
+
+🔄 GitHub工作流配置
+[ ] daily.yml - 日分析工作流
+
+触发：每日09:30 或 手动 workflow_dispatch
+运行环境：自托管Runner
+执行脚本（含对照组）✅：
+identify_success_samples.py
+feature_extraction.py（20日窗口） ✅
+ai_feature_synthesis.py
+chip_distribution.py
+feature_importance.py
+identify_contrast_group.py ✅
+extract_contrast_features.py ✅
+compare_contrast_vs_candidates.py ✅
+model_training.py
+model_ensemble.py
+similarity_filter.py
+generate_daily_report.py
+generate_supervisory_report.py
+状态：⏳ 待开发
+[ ] weekly.yml - 周报告工作流
+
+触发：每周一 或 手动
+执行：生成周报、汇总数据
+状态：⏳ 待开发
+[ ] monthly.yml - 月报告工作流
+
+触发：每月1日 或 手动
+执行：生成月报、性能评估
+状态：⏳ 待开发
+[ ] trigger.yml - 触发机制工作流 ✅
+
+功能：检测本地数据完成，自动启动daily.yml
+接收方式：github_trigger.py调用
+验证：数据完整性检查
+状态：⏳ 待开发
+[ ] deploy.yml - 部署网页工作流
+
+触发：每天 或 手动
+功能：部署Dashboard到GitHub Pages
+状态：⏳ 待开发
+确认标准：项目经理确认→GitHub工作流正常触发 ✅
+
+🖥️ 自托管Runner配置
+[ ] 本地机器安装Runner
+
+平台：Windows
+安装位置：D:\cto\runner\
+注册到GitHub：cto仓库 Settings → Actions → Runners
+状态：⏳ 待配置
+[ ] 配置Runner访问本地data目录
+
+权限：Runner可读写 D:\cto\data\
+权限：Runner可读写 D:\cto\scripts\
+权限：Runner可读写 D:\cto\dashboard\
+测试：trigger.yml能正常读取本地文件
+状态：⏳ 待配置
+确认标准：项目经理确认→Runner安装完成，可正常执行工作流 ✅
+
+📢 监督报告系统
+[ ] generate_supervisory_report.py - 监督报告生成脚本
+
+监控内容：
+数据采集：4个程序是否按时完成、文件是否完整
+GitHub工作流：是否按时触发、是否成功、耗时是否异常
+Dashboard更新：数据是否实时同步
+API调用：是否超限、使用统计
+候选股票：数量是否在预期范围
+对照组：数据是否完整、分离度是否正常 ✅
+员工任务：各员工是否按时完成
+输出：supervisor_report.json
+状态：⏳ 待开发
+[ ] supervisor_report.json - 监督报告文件
+
+包含：项目状态、问题列表、数据质量、员工日志、关键指标、对照组指标 ✅
+更新频率：每日16:00
+Dashboard展示：监督报告板块
+状态：⏳ 待更新
+确认标准：项目经理确认→监督报告包含对照组指标 ✅
+
+🗣️ 消息面分析集成
+[ ] daily_news_analysis.json - 消息面分析文件
+
+内容：重大事件、板块影响、权重调整
+生成方式：人工分析 + 手工填写 JSON 或 AI辅助
+提交截止：每日15:30
+状态：⏳ 待启动
+[ ] 权重调整逻辑 - 消息面权重集成
+
+根据日常新闻调整各行业权重
+权重范围：[0.5-1.5]倍数
+集成到相似度筛选中
+状态：⏳ 待开发
+确认标准：项目经理确认→消息面数据可及时提交 ✅
+
+预期产出
+✅ Dashboard完整版（参数调整+对照组参数+密码+双语） ✅
+✅ GitHub工作流5个（daily/weekly/monthly/trigger/deploy，含对照组逻辑的daily.yml） ✅
+✅ 自托管Runner安装完成
+✅ supervisor_report.json（含对照组指标的监督报告） ✅
+✅ 框架备份 v1.3
+阶段确认
+[ ] 项目经理确认：参数调整生效 ✅
+[ ] 项目经理确认：对照组参数可独立调整 ✅
+[ ] 项目经理确认：密码保护正常 ✅
+[ ] 项目经理确认：GitHub工作流正常触发 ✅
+[ ] 项目经理确认：监督报告包含对照组指标 ✅
+阶段3预计完成时间：2026-01-14
+
+📊 阶段4详细进度（优化与文档完善）
+目标：性能优化、文档完善、上线运维
+周期：第5周及后续
+负责人：AI Agent（代码）+ 项目经理（确认）
+
+任务清单
+⚡ 性能优化
+[ ] 特征计算优化 - 加速特征提取
+
+目标：特征计算耗时 < 5分钟
+方案：并行处理、缓存优化
+状态：⏳ 待优化
+[ ] 对照组识别优化 ✅
+
+目标：对照组识别耗时 < 2分钟
+方案：排序优化、内存优化
+状态：⏳ 待优化
+[ ] ML模型推理优化 - 加速预测
+
+目标：模型预测耗时 < 3分钟
+方案：模型压缩、批处理
+状态：⏳ 待优化
+[ ] 数据库查询优化 - 加速数据访问
+
+目标：数据查询耗时 < 1分钟
+方案：索引优化、查询优化
+状态：⏳ 待优化
+确认标准：项目经理确认→各模块性能达到预期 ✅
+
+📚 文档完善
+[ ] 项目计划.md - 完整计划书（已完成）
+
+状态：✅ 完成
+[ ] dashboard_guide.md - Dashboard使用指南
+
+内容：各板块功能说明、参数调整教程
+状态：⏳ 待编写
+[ ] monitor_guide.md - Monitor使用指南
+
+内容：工作流监控、日志查看、手动操作
+状态：⏳ 待编写
+[ ] parameter_guide.md - 参数调整指南
+
+内容：各参数含义、推荐设置、调整技巧
+状态：⏳ 待编写
+[ ] contrast_group_guide.md ✅ 新增 - 对照组使用指南
+
+内容：对照组功能说明、分离度理解、对比分析方法
+状态：⏳ 待编写
+[ ] api_strategy.md - API调用策略
+
+内容：API限制说明、优化策略、监控方法
+状态：⏳ 待编写
+[ ] README.md - 项目说明
+
+内容：项目简介、快速开始、常见问题
+状态：⏳ 待编写
+确认标准：项目经理确认→所有文档完整清晰 ✅
+
+🧪 测试与验证
+[ ] 单元测试 - 各模块独立测试
+
+feature_extraction_test.py
+ml_models_test.py
+similarity_filter_test.py
+状态：⏳ 待编写
+[ ] 对照组单元测试 ✅ 新增
+
+contrast_group_test.py
+contrast_compare_test.py
+状态：⏳ 待编写
+[ ] 集成测试 - 端到端测试
+
+test_integration.py
+测试流程：数据采集→特征提取→ML训练→相似度筛选→对照组分析→Dashboard展示
+状态：⏳ 待编写
+[ ] 回测验证 - 历史数据验证
+
+对历史数据进行回测
+验证策略有效性
+状态：⏳ 待进行
+[ ] 对照组稳健性测试 ✅ 新增
+
+测试对照组的稳定性
+测试分离度的一致性
+测试特征区分度
+状态：⏳ 待进行
+确认标准：项目经理确认→所有测试通过 ✅
+
+💾 框架备份与版本控制
+[ ] framework_backup_v1.4.zip - 最终框架备份
+
+包含：所有脚本、网页、工作流、文档
+状态：⏳ 待生成
+[ ] framework_backup_current.zip - 每周备份
+
+每周五自动生成
+用于快速恢复
+状态：⏳ 待设置
+[ ] backup_manager.py - 备份管理脚本
+
+功能：自动清理超过180天的历史备份
+功能：生成新备份
+功能：版本管理
+状态：⏳ 待开发
+确认标准：项目经理确认→备份完整，版本管理清晰 ✅
+
+预期产出
+✅ 完整文档体系（含对照组文档）
+✅ 所有代码通过测试（含对照组测试）
+✅ 性能达到预期
+✅ 框架备份 v1.4（最终）
+✅ 项目可稳定运维
+阶段确认
+[ ] 项目经理确认：所有文档完整 ✅
+[ ] 项目经理确认：对照组文档清晰 ✅
+[ ] 项目经理确认：项目可稳定运维 ✅
+阶段4预计完成时间：2026-02-04
+
+📊 关键时间节点
+| 时间 | 事件 | 负责人 |
+|------|------|--------|
+| 2025-12-17 | 项目计划v2.0完成 | 项目经理 |
+| 2025-12-18 | 阶段1启动 | AI Agent |
+| 2025-12-31 | 阶段1完成 | AI Agent |
+| 2026-01-07 | 阶段2完成（含对照组） ✅ | AI Agent |
+| 2026-01-14 | 阶段3完成 | AI Agent |
+| 2026-02-04 | 阶段4完成，项目上线 | AI Agent + 项目经理 |
+
+📌 重要提醒
+GitHub操作规范
+GitHub项目文件夹标准路径
+https://github.com/laobai6630-dotcom/cto/tree/main/projects/%E5%B1%B1%E8%84%9A%E4%B8%8B
+GitHub文件直接编辑方法 ⭐
+✅ 当需要更新GitHub文件内容时，直接用网页编辑：
+
+点击GitHub文件的铅笔图标（或直接用编辑链接）
+清空现有内容，粘贴新内容
+填写Commit message
+提交
+重要：不会让AI上传，因为AI可能理解错误。 这样既快速、又准确、还避免了AI误操作。👍
+
+长上下文发送规则 ⭐
+发送长篇幅内容时：
+
+每部分结尾标注"此部分最后一行"内容
+下一部分开头加上"上部分最后一行"
+确保复制的内容完整，无遗漏
+📋 每周更新项
+| 项目 | 周期 | 内容 | 责任人 |
+|------|------|------|--------|
+| 进度跟踪.md | 每周五 | 更新各阶段进度、完成情况 | 项目经理 |
+| 新聊天快速恢复.md | 每周五 | 更新重要链接、快速参考 | 项目经理 |
+| 框架备份 | 每周五 | 生成最新backup_current.zip | AI Agent |
+| 监督报告 | 每日16:00 | 项目日常状态监控 | 监督员工 |
+| 日报 | 每日完成后 | 当日工作总结 | AI Agent |
