--- a/projects/山脚下/新聊天快速恢复.md
+++ b/projects/山脚下/新聊天快速恢复.md
@@ -1,365 +1,168 @@
-# 新聊天快速恢复文档
+# 山脚下项目 - 新聊天快速恢复
 
-> **项目**: 山脚下客户流失预测系统  
+> **项目**: 山脚下 - A股"山脚下"形态股票精准筛选系统  
 > **版本**: v2.0  
-> **最后更新**: 2025-12-17  
+> **最后更新**: 2025-12-18  
 > **用途**: 新聊天窗口快速恢复项目上下文
 
 ---
 
-## 🚀 项目计划快速入口
+## 🚀 核心链接
 
-### 核心文档
-
-| 文档 | 本地路径 | GitHub链接 | 说明 |
-|------|---------|-----------|------|
-| **项目计划v2.0** | `D:\cto\projects\山脚下\项目计划.md` | [GitHub](https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/项目计划.md) | 完整的8000+行项目计划书 |
-| **目录导航** | `D:\cto\projects\山脚下\项目计划_目录导航.md` | [GitHub](https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/项目计划_目录导航.md) | 快速导航到关键章节 |
-| **进度跟踪** | `D:\cto\projects\山脚下\进度跟踪.md` | [GitHub](https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/进度跟踪.md) | 实时项目进度和任务状态 |
-| **快速恢复** | `D:\cto\projects\山脚下\新聊天快速恢复.md` | [GitHub](https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/新聊天快速恢复.md) | 本文档 |
-
-### GitHub仓库
-- **仓库地址**: https://github.com/laobai6630-dotcom/cto/
-- **项目路径**: `projects/山脚下/`
-- **分支**: `main`
+| 资源 | 链接 |
+|------|------|
+| **项目计划** | [项目计划.md](https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/项目计划.md) |
+| **进度跟踪** | [进度跟踪.md](https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/进度跟踪.md) |
+| **快速导航** | [项目计划_目录导航.md](https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/项目计划_目录导航.md) |
+| **GitHub仓库** | [laobai6630-dotcom/cto](https://github.com/laobai6630-dotcom/cto/) |
 
 ---
 
-## 📋 项目当前状态
+## 📊 项目状态速览
 
-### 基本信息
-- **项目名称**: 山脚下 (Shanjiaxia)
-- **项目类型**: 客户流失预测系统
-- **当前阶段**: 规划完成，待启动
-- **开始日期**: 2025-12-17
-- **预计完成**: 2026-04-17 (120天，4个阶段)
+**当前阶段**: 阶段0规划完成，待启动阶段1  
+**项目周期**: 120天（5个阶段）  
+**启动时间**: 2025-12-17  
+**预计完成**: 2026-04-17  
 
-### 最新进展
-- ✅ **2025-12-17**: 项目计划v2.0完成
-- ✅ 完成88特征体系设计
-- ✅ 完成四阶段实施计划
-- ✅ 完成员工配置与权限规划
-- ✅ 完成对照组功能设计
-- ⏳ 待启动：阶段一 - 环境搭建与数据准备
+**4阶段概览**:
+| 阶段 | 周期 | 内容 | 状态 |
+|------|------|------|------|
+| 1 | 第1-2周 | 数据采集、特征提取、ML模型 | ⏳ 待启动 |
+| 2 | 第3周 | 对照组、相似度筛选、Dashboard | ⏳ 待启动 |
+| 3 | 第4周 | 密码、双语、GitHub工作流、监督 | ⏳ 待启动 |
+| 4 | 第5周+ | 优化、文档、上线 | ⏳ 待启动 |
 
 ---
 
-## 🎯 四个阶段概览
+## 💡 项目核心
 
-| 阶段 | 时间 | 主要任务 | 状态 |
-|------|------|---------|------|
-| **阶段一** | Day 1-30 | 环境搭建、数据库设计、数据导入、EDA | ⏳ 待开始 |
-| **阶段二** | Day 31-60 | 特征工程(88个特征)、模型训练与评估 | ⏳ 待开始 |
-| **阶段三** | Day 61-90 | 系统集成、对照组模块、API开发、测试 | ⏳ 待开始 |
-| **阶段四** | Day 91-120 | 部署上线、对照组实验、效果评估、优化 | ⏳ 待开始 |
+**四个已有数据采集程序**:
+- 日线和分钟线数据获取.py
+- 周线数据获取.py
+- 月线数据获取.py
+- 财务和基本面数据获取.py
 
----
+**88个特征体系**: 134原始 + 10AI合成 + 10筹码分布 + 对照组对比
 
-## 🔑 核心改动汇总 (v1.0 → v2.0)
+**7项核心要求**: 框架备份 | 每步确认 | GitHub提醒 | 消息面员 | 工作进度网页 | 双语界面 | 密码保护
 
-| 改动项 | v1.0 | v2.0 | 影响 |
-|--------|------|------|------|
-| **数据保留期** | 90天 | **180天** | 数据库存储、特征计算 |
-| **特征窗口期** | 30天 | **20天** | 特征工程、模型训练 |
-| **对照组功能** | 无 | **新增** | 系统设计、效果验证 |
-| **特征数量** | 基础版 | **88个完整特征** | 特征工程模块 |
-| **模型类型** | 单模型 | **多模型对比** | 模型训练模块 |
-
-### 对照组功能核心要点
-- **分组比例**: 干预组90% : 对照组10%
-- **随机分配**: 对高风险客户进行随机分组
-- **观察周期**: 7天
-- **效果验证**: 通过统计检验验证挽留措施效果
-- **数据表**: 3个新增表（config, assignments, analysis）
+**对照组机制**: 跌幅前20名股票对比，验证特征稳健性
 
 ---
 
-## 📊 88个特征体系速览
+## 📋 当前待做
 
-### 特征分类 (8大类)
-1. **基础信息特征** (8个) - 客户基本属性
-2. **RFM特征** (12个) - 新近度、频率、价值
-3. **交易行为特征** (20个) - 金额、频次、品类、趋势
-4. **互动行为特征** (15个) - 登录、浏览、客服、渠道
-5. **变化趋势特征** (12个) - 短期、中期、长期趋势
-6. **生命周期特征** (8个) - 客户生命周期阶段
-7. **社交网络特征** (6个) - 推荐、好友、影响力
-8. **风险信号特征** (7个) - 不活跃、负面反馈、流失信号
+**立即启动（第1周）**:
+- [ ] 审查四个采集程序 → 集成到scheduler_main.py
+- [ ] 特征提取模块（134原始+10AI+10筹码）
+- [ ] 特征标准化和重要性排名
 
-### TOP 20 重要特征
-1. days_since_last_transaction (最后交易距今)
-2. days_since_last_login (最后登录距今)
-3. consecutive_inactive_days (连续不活跃天数)
-4. rfm_combined_score (RFM综合得分)
-5. transaction_count_20d (20天交易次数)
-6. total_amount_20d (20天总金额)
-7. frequency_change_7d (7天频次变化率)
-8. amount_change_7d (7天金额变化率)
-9. login_count_20d (20天登录次数)
-10. engagement_score (参与度得分)
-... (完整列表见项目计划4.2节)
+**Task详见**: [进度跟踪.md - 阶段1详细进度](https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/进度跟踪.md#-阶段1详细进度基础框架搭建)
 
 ---
 
-## 👥 团队配置
+## 🔧 工作要求说明
 
-### 人员组成 (4人)
-1. **项目经理/Tech Lead** (1人) - 全面管理和技术决策
-2. **数据工程师** (1人) - 数据库、ETL、特征工程
-3. **算法工程师** (1人) - 模型训练、算法优化
-4. **后端工程师** (1人) - API、系统集成、部署
+### ⭐ 要求1: 回答简洁，不展示分析过程
 
-### 权限矩阵速查
-- **数据库**: 项目经理(完全) | 数据工程师(读写) | 其他(只读)
-- **模型训练**: 项目经理、算法工程师
-- **系统部署**: 项目经理、后端工程师
-- **对照组配置**: 项目经理、算法工程师、后端工程师
+尽量直接给出结论和行动建议，省略推导步骤，节省上下文。
 
----
+### ⭐ 要求2: 长文本分段发送 + 标注最后一行
 
-## 🗂️ 关键文件快速导航
+**模式**:
+[发送第1部分内容]
+此部分最后一行：[复制该行内容]
 
-### 项目计划章节
-- [第一部分：项目概述](./项目计划.md#第一部分项目概述) - 灵感、目标、实施计划
-- [第二部分：核心改动](./项目计划.md#第二部分核心改动) - 9项改动详解
-- [第三部分：系统架构](./项目计划.md#第三部分完整系统架构) - 目录结构、数据架构
-- [第四部分：88特征体系](./项目计划.md#第四部分88特征体系) - 特征分类和实现
-- [第五部分：实施路线图](./项目计划.md#第五部分实施路线图) - 4阶段详细计划
+上一部分最后一行：[粘贴该行]
+[发送第2部分内容]
+此部分最后一行：[复制该行内容]
 
-### 关键技术点
-- [数据保留策略](./项目计划.md#322-数据保留策略) - 180天数据管理
-- [数据流向](./项目计划.md#33-数据流向说明) - 完整数据流程图
-- [对照组实现](./项目计划.md#53-对照组功能实现) - 分组算法和效果分析
-- [特征计算框架](./项目计划.md#43-特征工程实现) - 代码实现示例
-- [快速参考](./项目计划.md#54-快速参考) - 命令、配置、导航
+
+这样防止GitHub长内容在行中截断导致错误。
+
+### ⭐ 要求3: GitHub可直接改内容就不建任务
+
+**判断标准**:
+- ✅ 文本内容改动（如更新进度、添加链接）→ 直接告诉你去GitHub复制粘贴
+- ✅ Markdown格式调整 → 直接告诉你去GitHub改
+- ❌ 代码开发任务 → 建立任务
+- ❌ 复杂逻辑 → 建立任务
+
+**操作方式**: "在GitHub进度跟踪.md第X行将『旧内容』改为『新内容』，点击铅笔图标编辑即可"
 
 ---
 
-## 🔧 快速启动命令
+## 88特征体系速览
 
-### 环境准备
+**8大类特征**:
+1. 基础信息(8个) - 客户属性
+2. RFM特征(12个) - 新近度、频率、价值
+3. 交易行为(20个) - 金额、频次、品类、趋势
+4. 互动行为(15个) - 登录、浏览、客服、渠道
+5. 变化趋势(12个) - 短中长期趋势
+6. 生命周期(8个) - 客户阶段
+7. 社交网络(6个) - 推荐、好友、影响力
+8. 风险信号(7个) - 不活跃、负面、流失信号
+
+**关键参数**:
+- 数据保留: 180个交易日
+- 特征窗口: 20个交易日（从拉升日前一天向前）
+- 模型集成: LR(0.4) + RF(0.3) + GB(0.3)
+- 权重分配: ML预测(0.6) + 筹码(0.2) + 消息面(0.2)
+- 对照组: 30天跌幅前20名
+
+---
+
+## 🎯 快速命令
+
 ```bash
-# 克隆仓库
+# 克隆和进入项目
 git clone https://github.com/laobai6630-dotcom/cto.git
 cd cto/projects/山脚下
 
-# 创建虚拟环境
-python -m venv venv
-source venv/bin/activate  # Linux/Mac
-# 或
-venv\Scripts\activate  # Windows
+# 查看文档
+cat 项目计划.md           # 完整计划
+cat 进度跟踪.md          # 进度详情
+cat 新聊天快速恢复.md    # 本文档
 
-# 安装依赖
-pip install -r requirements.txt
-```
+# 启动数据采集（示例）
+python scripts/data_collection/collect_daily_minute.py
 
-### 数据库初始化
-```bash
-# 初始化数据库
-python scripts/setup_database.py
+# 提交更新
+git add .
+git commit -m "完成[阶段/任务]：[简述内容]"
+git push origin main
+❓ 常见问题
+Q: 为什么特征窗口是20日不是30日？
+A: 近期行为更有代表性，20日避免噪音同时保留关键特征。
 
-# 导入测试数据
-python scripts/import_test_data.py
-```
+Q: 对照组如何选择？
+A: 每日计算30日涨跌幅，取跌幅最大的前20只股票。
 
-### 每日预测
-```bash
-# 运行每日预测
-python scripts/daily_prediction.py --date 2025-12-17
+Q: 递进筛选50%→40%→30%是什么？
+A: 逐步降低相似度阈值，确保总能找到候选股票。
 
-# 查看预测结果
-python scripts/view_predictions.py --date 2025-12-17
-```
+Q: 框架备份什么时候生成？
+A: 每阶段完成后生成版本备份(v1.1~v1.4)，每周五生成backup_current.zip。
 
-### 对照组操作
-```bash
-# 创建对照组实验
-python -m src.control_group.assignment --experiment-name "exp_001"
+Q: GitHub工作流如何自动执行？
+A: 本地数据采集完成→github_trigger.py调用API→自动触发daily.yml。
 
-# 跟踪对照组
-python -m src.control_group.tracking --experiment-id 1
+📅 重要时间节点
+| 日期 | 任务 |
+|------|------|
+| 2025-12-18 | 启动阶段1 |
+| 2025-12-31 | 阶段1完成（数据+特征+ML） |
+| 2026-01-07 | 阶段2完成（筛选+对照+Dashboard） |
+| 2026-01-14 | 阶段3完成（工作流+监督） |
+| 2026-01-21 | 阶段4完成 → 项目上线 |
 
-# 分析效果
-python -m src.control_group.analysis --experiment-id 1
-```
+版本: v2.0
+最后更新: 2025-12-18
+用途: 新窗口快速恢复
+GitHub: https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/新聊天快速恢复.md
+本地: D:\cto\projects\山脚下\新聊天快速恢复.md
 
----
-
-## 📈 关键指标参考
-
-### 数据指标
-- **数据保留期**: 180天
-- **特征窗口**: 20天
-- **预测周期**: 7天
-- **特征总数**: 88个
-- **对照组比例**: 10%
-
-### 模型指标目标
-- **AUC**: ≥ 0.75
-- **准确率**: ≥ 70%
-- **预测耗时**: < 30分钟
-- **系统可用性**: ≥ 99%
-
-### 业务指标目标
-- **流失率降低**: 15-20%
-- **挽留成功率**: ≥ 40%
-- **高价值客户识别率**: ≥ 85%
 
 ---
-
-## 📅 重要时间节点
-
-| 节点 | 日期 | 说明 |
-|------|------|------|
-| 项目启动 | 2025-12-17 | 项目计划v2.0完成 |
-| 阶段一完成 | 2026-01-17 | 环境和数据准备完成 |
-| 阶段二完成 | 2026-02-17 | 特征和模型完成 |
-| 阶段三完成 | 2026-03-17 | 系统集成完成 |
-| 系统上线 | 2026-03-24 | 正式部署生产环境 |
-| 首次对照组实验 | 2026-04-01 | 启动第一轮对照组实验 |
-| 阶段四完成 | 2026-04-17 | 项目整体完成 |
-
----
-
-## 🎓 新成员快速上手指南
-
-### 第一步：阅读文档 (30分钟)
-1. 阅读本文档（新聊天快速恢复.md）
-2. 浏览项目计划_目录导航.md
-3. 了解当前进度（进度跟踪.md）
-
-### 第二步：理解核心概念 (1小时)
-1. 理解数据保留策略（180天）
-2. 理解特征窗口（20天）
-3. 理解对照组机制
-4. 理解88特征体系框架
-
-### 第三步：熟悉技术栈 (1小时)
-- Python 3.8+
-- PostgreSQL
-- Pandas, NumPy
-- scikit-learn, XGBoost
-- FastAPI
-
-### 第四步：环境搭建 (2小时)
-1. 克隆代码仓库
-2. 安装依赖
-3. 配置数据库
-4. 运行测试用例
-
-### 第五步：领取任务
-1. 查看进度跟踪.md中的任务清单
-2. 联系项目经理分配任务
-3. 在对应分支开始开发
-
----
-
-## ❓ 常见问题速答
-
-### Q1: 为什么数据保留期是180天？
-**A**: 为了捕捉更长期的客户行为模式，支持季节性分析，提供更充足的训练数据。详见项目计划2.2.1节。
-
-### Q2: 为什么特征窗口是20天而不是30天？
-**A**: 近期行为对流失预测更有预测力，20天可以减少计算复杂度同时保持预测准确性。详见项目计划2.2.2节。
-
-### Q3: 对照组如何确保随机性？
-**A**: 使用Python的random模块，设置固定seed确保可重复性，对高风险客户列表进行随机打乱后按比例分配。详见项目计划5.3节。
-
-### Q4: 88个特征如何计算？
-**A**: 使用特征计算流水线(FeaturePipeline)，每个特征类别有独立的Calculator类，批量计算后存储到features表。详见项目计划4.3节。
-
-### Q5: 如何验证模型效果？
-**A**: 
-1. 离线评估：AUC、准确率、精确率、召回率
-2. 在线评估：对照组实验，对比干预组和对照组的实际流失率
-详见项目计划5.3.2节。
-
-### Q6: 项目代码在哪里？
-**A**: 
-- GitHub: https://github.com/laobai6630-dotcom/cto/
-- 本地: D:\cto\ 或 Linux系统中对应位置
-
-### Q7: 如何报告Bug或问题？
-**A**: 
-1. 在GitHub仓库创建Issue
-2. 在团队协作工具（如钉钉、企微）反馈
-3. 联系项目经理
-
----
-
-## 🔗 外部资源链接
-
-### 技术文档
-- [XGBoost官方文档](https://xgboost.readthedocs.io/)
-- [scikit-learn文档](https://scikit-learn.org/stable/)
-- [FastAPI文档](https://fastapi.tiangolo.com/)
-- [PostgreSQL文档](https://www.postgresql.org/docs/)
-
-### 参考资料
-- RFM模型原理
-- 客户流失预测最佳实践
-- A/B测试和对照组实验设计
-
----
-
-## 💡 使用建议
-
-### 在新聊天窗口中恢复上下文
-1. **复制本文档内容**粘贴到新聊天窗口
-2. 或发送: "打开项目文档: D:\cto\projects\山脚下\新聊天快速恢复.md"
-3. 或发送: "查看GitHub: https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/新聊天快速恢复.md"
-
-### 快速定位到特定章节
-- "查看88特征体系" → 项目计划.md第四部分
-- "查看对照组设计" → 项目计划.md第五部分5.3节
-- "查看当前任务" → 进度跟踪.md
-- "查看数据架构" → 项目计划.md第三部分3.2节
-
-### 继续推进项目
-1. 查看进度跟踪.md了解当前阶段
-2. 查看待完成任务清单
-3. 更新任务完成状态
-4. 记录遇到的问题和解决方案
-
----
-
-## 📞 联系方式
-
-### 项目团队
-- **项目经理/Tech Lead**: [待定]
-- **数据工程师**: [待定]
-- **算法工程师**: [待定]
-- **后端工程师**: [待定]
-
-### 协作工具
-- **代码仓库**: GitHub
-- **文档管理**: GitHub + 本地Markdown
-- **任务管理**: 进度跟踪.md
-- **即时通讯**: [待定]
-
----
-
-## 🎯 下一步行动
-
-### 立即可做
-- [ ] 查看完整项目计划书 (项目计划.md)
-- [ ] 了解当前进度 (进度跟踪.md)
-- [ ] 查看快速导航 (项目计划_目录导航.md)
-- [ ] 克隆GitHub仓库到本地
-- [ ] 组建项目团队
-
-### 本周计划
-- [ ] 召开项目启动会
-- [ ] 分配角色和任务
-- [ ] 开始阶段一Week1任务
-- [ ] 搭建开发环境
-
----
-
-> **文档版本**: v1.0  
-> **最后更新**: 2025-12-17  
-> **维护者**: 项目团队  
-> **更新频率**: 根据项目进展实时更新  
-> 
-> **GitHub**: https://github.com/laobai6630-dotcom/cto/blob/main/projects/山脚下/新聊天快速恢复.md  
-> **本地路径**: D:\cto\projects\山脚下\新聊天快速恢复.md
