sync: update project files and configurations

--- a/projects/山脚下/新聊天快速恢复.md
+++ b/projects/山脚下/新聊天快速恢复.md
@@ -1,3 +1,6 @@
+| 资源 | 链接 |
+|------|------|
+| **目录结构** | [DIRECTORY_STRUCTURE.md](docs/DIRECTORY_STRUCTURE.md) |
 # 山脚下项目 - 新聊天快速恢复
 
 > **项目**: 山脚下 - A股"山脚下"形态股票精准筛选系统  
