--- a/projects/山脚下/进度跟踪.md
+++ b/projects/山脚下/进度跟踪.md
@@ -1,3 +1,6 @@
+## 📂 快速导航
+- [📊 完整目录结构](docs/DIRECTORY_STRUCTURE.md) ← 所有文件夹和文件说明
+- [📋 项目计划](项目计划.md)
 📊 山脚下项目 - 进度跟踪表
 项目名称：山脚下 - A股"山脚下"形态股票精准筛选系统
 项目版本：v2.0
